--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@
   
   }
   
-  @media(max-width:768px){
+  /*@media(max-width:768px){
   
     #menu-bar{
       display: initial;
@@ -287,7 +287,7 @@
       border-left:.5rem solid var(--red);
       background:#fff;
     }
-  }
+  }*/
   
   @media(max-width:450px){
   
