--- a/style.css
+++ b/style.css
@@ -52,6 +52,26 @@
     margin-top: 1rem;
     
   }
+
+  .btn::before{
+    content: '';
+    position: absolute;
+    top:0; right: 0;
+    width:0%;
+    height:100%;
+    background:var(--red);
+    transition: .3s linear;
+    z-index: -1;
+  }
+  
+  .btn:hover::before{
+    width:100%;
+    left: 0;
+  }
+  
+  .btn:hover{
+    color:#fff;
+  }
   
   header{
     position: fixed;
