--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --red: #069230;
+  --red: rgb(10, 10, 10);
 }
 
 * {
@@ -126,7 +126,7 @@ header .navbar a:hover {
   gap: 1.5rem;
   min-height: 100vh;
   align-items: center;
-  background: url(https://s27363.pcdn.co/wp-content/uploads/2017/07/Old-Bridge-Mostar.jpg.optimal.jpg)
+  background: url(https://cdn.thespaces.com/wp-content/uploads/2021/07/NOLA.jpg)
     no-repeat;
   background-size: cover;
   background-position: center;
@@ -134,20 +134,20 @@ header .navbar a:hover {
 
 .home .content {
   /*background-color: white;*/
-  margin-top: 295px;
-  margin-left: -20px;
+  margin-top: 10px;
+  margin-left: 200px;
 }
 
 .home .content h3 {
   font-size: 5rem;
-  color: rgb(250, 248, 248);
+  color: rgb(10, 10, 10);
   font-weight: bold;
 }
 
 .speciality .box-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem;
+  gap: 4.5rem;
 }
 
 .specijalitetDiv{
@@ -210,6 +210,52 @@ header .navbar a:hover {
   color: white;
 }
 
+.popular .box-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap:1.5rem;
+}
+
+.popular .box-container .box{
+  padding:2rem;
+  background:#fff;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+  border:.1rem solid rgba(0,0,0,.3);
+  border-radius: .5rem;
+  text-align: center;
+  flex:1 1 30rem;
+  position: relative;
+}
+
+.popular .box-container .box img{
+  height:25rem;
+  object-fit: cover;
+  width:100%;
+  border-radius: .5rem;
+}
+
+.popular .box-container .box .price{
+  position: absolute;
+  top:3rem; left:3rem;
+  background:var(--red);
+  color:#fff;
+  font-size: 2rem;
+  padding:.5rem 1rem;
+  border-radius: .5rem;
+}
+
+.popular .box-container .box h3{
+  color:#333;
+  font-size: 2.5rem;
+  padding-top: 1rem;
+}
+
+.popular .box-container .box .stars i{
+  color:gold;
+  font-size: 1.7rem;
+  padding:1rem .1rem;
+}
+
 .review .box-container {
   display: flex;
   flex-wrap: wrap;
@@ -219,11 +265,11 @@ header .navbar a:hover {
 .review .box-container .box {
   text-align: center;
   padding: 2rem;
-  border: 1rem solid #fff;
+  border: 1rem solid rgb(0, 0, 0);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
   border-radius: 0.5rem;
   flex: 1 1 30rem;
-  background: #333;
+  background: rgb(247, 229, 198);
   margin-top: 6rem;
 }
 
@@ -231,25 +277,25 @@ header .navbar a:hover {
   height: 12rem;
   width: 12rem;
   border-radius: 50%;
-  border: 1rem solid #fff;
+  border: 1rem solid rgb(0, 0, 0);
   margin-top: -8rem;
   object-fit: cover;
 }
 
 .review .box-container .box h3 {
   font-size: 2.5rem;
-  color: #fff;
+  color: rgb(8, 8, 8);
   padding: 0.5rem 0;
 }
 
 .review .box-container .box p {
   font-size: 1.5rem;
-  color: #eee;
+  color: rgb(8, 8, 8);
   padding: 1rem 0;
 }
 
 .footer {
-  background: rgb(7, 7, 7);
+  background: rgb(247, 229, 198);
   text-align: center;
 }
 
@@ -262,7 +308,7 @@ header .navbar a:hover {
 
 .footer .credit {
   padding: 2.5rem 1rem;
-  color: #fff;
+  color: rgb(10, 10, 10);
   font-weight: normal;
   font-size: 2rem;
 }
