--- a/style.css
+++ b/style.css
@@ -133,9 +133,11 @@ header .navbar a:hover {
 }
 
 .home .content {
-  /*background-color: white;*/
+  /*background-color: white;
   margin-top: 10px;
   margin-left: 200px;
+  text-align: center;*/
+  margin:0 auto;
 }
 
 .home .content h3 {
@@ -265,7 +267,7 @@ header .navbar a:hover {
 .review .box-container .box {
   text-align: center;
   padding: 2rem;
-  border: 1rem solid rgb(0, 0, 0);
+  border: 0.5rem solid rgb(0, 0, 0);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
   border-radius: 0.5rem;
   flex: 1 1 30rem;
@@ -277,7 +279,7 @@ header .navbar a:hover {
   height: 12rem;
   width: 12rem;
   border-radius: 50%;
-  border: 1rem solid rgb(0, 0, 0);
+  border: 0.5rem solid rgb(0, 0, 0);
   margin-top: -8rem;
   object-fit: cover;
 }
